[package]
name = "boss"
description = "Baseball Open Source Software"
version = "0.2.0"
authors = ["Eli Ben-Porat <eli.bp@jottabyte.io>"]
edition = "2018"

[dependencies]
isahc = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.3.1"
serde_json = "1"
rayon = "1.2.0"
csv = "1.1"
quick-xml = { git = "https://github.com/tafia/quick-xml/", branch = "serde" }
futures = "0.3"

[profile.release]
opt-level = 3


